--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,84 @@
+# ESP-IDF Build System
+build/
+sdkconfig
+sdkconfig.old
+*.tmp
+*.pyc
+
+# ESP-IDF Dependencies
+dependencies.lock
+managed_components/
+
+# CMake
 CMakeLists.txt.user
 CMakeCache.txt
-CMakeFiles
-CMakeScripts
-Testing
+CMakeFiles/
+CMakeScripts/
+Testing/
 Makefile
 cmake_install.cmake
 install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
-_deps
+_deps/
 CMakeUserPresets.json
 
+# IDE Files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS Files
+.DS_Store
+Thumbs.db
+*.log
+
+# Backup Files
+*.backup
+*.bak
+*.orig
+
+# Temporary Files
+*.tmp
+*.temp
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+env/
+venv/
+ENV/
+
 # CLion
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#cmake-build-*
+cmake-build-*/
+
+# Visual Studio Code
+.vscode/settings.json
+.vscode/tasks.json
+.vscode/launch.json
+.vscode/extensions.json
+
+# JetBrains IDEs
+.idea/
+*.iws
+*.iml
+*.ipr
+
+# Certificates and Keys (Security)
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+private_key.pem
+certificate.pem
+
+# Configuration Files with Sensitive Data
+config_private.h
+secrets.h
+wifi_credentials.h
