implement configuration and io-management

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,28 @@ cmake_minimum_required(VERSION 3.16)
 # Set the project name
 set(PROJECT_NAME "sip_door_station")
 
+# Load environment variables from .env file if it exists
+if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.env")
+    message(STATUS "Loading configuration from .env file")
+    file(STRINGS "${CMAKE_CURRENT_SOURCE_DIR}/.env" ENV_VARS)
+    foreach(ENV_VAR ${ENV_VARS})
+        # Skip comments and empty lines
+        if(NOT ENV_VAR MATCHES "^#" AND NOT ENV_VAR STREQUAL "")
+            # Parse KEY=VALUE format
+            string(REGEX MATCH "^([^=]+)=(.*)$" MATCH_RESULT ${ENV_VAR})
+            if(MATCH_RESULT)
+                set(ENV_KEY ${CMAKE_MATCH_1})
+                set(ENV_VALUE ${CMAKE_MATCH_2})
+                # Set as environment variable for the build
+                set(ENV{${ENV_KEY}} ${ENV_VALUE})
+                message(STATUS "Set ${ENV_KEY}=${ENV_VALUE}")
+            endif()
+        endif()
+    endforeach()
+else()
+    message(STATUS "No .env file found, using system environment variables only")
+endif()
+
 # Include ESP-IDF build system
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
