--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,6 +1,17 @@
-idf_component_register(SRCS "app_main.c" "config_manager.c" "io_manager.c" "io_events.c" "sip_manager.c" "sip_io_integration.c" "esp_sip.c"
+# Determine if we need test component
+set(MAIN_REQUIRES nvs_flash driver esp_event esp_timer esp_http_server spiffs json esp_wifi unity)
+set(MAIN_PRIV_REQUIRES "")
+
+# Add test component if test mode is enabled
+if(DEFINED ENV{RUN_TESTS})
+    list(APPEND MAIN_PRIV_REQUIRES test)
+    message(STATUS "Test mode enabled - adding test component to build")
+endif()
+
+idf_component_register(SRCS "app_main.c" "config_manager.c" "io_manager.c" "io_events.c" "sip_manager.c" "sip_io_integration.c" "esp_sip.c" "web_server.c" "app_controller.c" "error_handler.c" "wifi_manager.c"
                     INCLUDE_DIRS "."
-                    REQUIRES nvs_flash driver esp_event esp_timer)
+                    REQUIRES ${MAIN_REQUIRES}
+                    PRIV_REQUIRES ${MAIN_PRIV_REQUIRES})
 
 # Pass environment variables as compile definitions
 if(DEFINED ENV{WIFI_SSID})
@@ -33,4 +44,10 @@ endif()
 
 if(DEFINED ENV{DOOR_PULSE_DURATION})
     target_compile_definitions(${COMPONENT_LIB} PRIVATE CONFIG_DOOR_PULSE_DURATION=$ENV{DOOR_PULSE_DURATION})
+endif()
+
+# Enable test mode if environment variable is set
+if(DEFINED ENV{RUN_TESTS})
+    target_compile_definitions(${COMPONENT_LIB} PRIVATE CONFIG_RUN_TESTS=1)
+    message(STATUS "Test mode compile definition added")
 endif()
