--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,9 @@ cmake_minimum_required(VERSION 3.16)
 # Set the project name
 set(PROJECT_NAME "sip_door_station")
 
+# Set partition table file
+set(PARTITION_TABLE_CUSTOM_FILENAME partitions.csv)
+
 # Load environment variables from .env file if it exists
 if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/.env")
     message(STATUS "Loading configuration from .env file")
@@ -38,3 +41,6 @@ include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 
 # Define the project
 project(${PROJECT_NAME})
+
+# Add web_root directory to SPIFFS image
+spiffs_create_partition_image(spiffs web_root FLASH_IN_PROJECT)
